
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/app/table";

import "prototype/multi_id.proto";

message so_extFollowing {
	prototype.following_relation           following_info                  =      1;
    prototype.following_created_order      following_created_order         =      2;
      
}


message so_list_extFollowing_by_following_created_order {
	prototype.following_created_order   	following_created_order     = 1;
	prototype.following_relation        	following_info              = 2;
}


message so_unique_extFollowing_by_following_info {
	prototype.following_relation        	following_info              = 1;
}
